# exopy

./: CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
apps/ai_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/ai_backend/src/: __init__.py  exceptions.py  server.py
apps/ai_backend/src/application/cloud/: __init__.py  exception.py  s3.py
apps/ai_backend/src/application/preprocessing/: __init__.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
apps/ai_backend/src/application/vector_store/: base.py  chroma.py  dispatcher.py  exceptions.py  milvus.py  pinecone.py
apps/ai_backend/src/config/: __init__.py  config.py
apps/ai_backend/src/core/cloud/: base.py  dispatcher.py  exception.py  gcp.py
apps/ai_backend/src/core/preprocessing/: chunking_data_handlers.py  dispatchers.py  embedding_data_handlers.py
apps/ai_backend/src/core/vector_store/: __init__.py  chroma.py  exceptions.py  pinecone.py  qdrant.py
apps/ai_backend/src/exception_handlers/: __init__.py  app_exception_handler.py
apps/ai_backend/src/middlewares/: __init__.py  api_key_middleware.py  process_time_middleware.py  rate_limiter_middleware.py  routes_middleware.py  security_header_middleware.py
apps/ai_backend/src/routers/: api.py  chat_routes.py  file_routes.py
apps/ai_backend/src/schemas/: cloud_store_schema.py  request_schema.py  response_schema.py  vector_store_schema.py
apps/ai_backend/src/services/: __init__.py
apps/ai_backend/src/services/ingestion/: __init__.py  exception.py  file_service.py
apps/ai_backend/src/services/redis/: client.py
apps/ai_backend/src/utility/: helper_utility.py
apps/ai_backend/src/utils/: mongo_utils.py
apps/ai_backend/tests/: conftest.py  test_api_endpoints.py  test_helpers.py  test_schemas.py
apps/dashboard_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/dashboard_backend/src/: app.ts  index.ts
apps/dashboard_backend/src/config/: env.ts  (+1 more)
apps/dashboard_backend/tests/: api.test.ts  setup.env.ts  utils.test.ts  validators.test.ts
apps/dashboard_frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  index.html  package-lock.json  package.json  server.js  vite.config.ts  vitest.config.ts
apps/dashboard_frontend/src/: index.css  main.tsx
apps/dashboard_frontend/tests/: authSlice.test.ts  components.test.tsx  schemas.test.ts  setup.ts  utils.test.ts
docs/: plan.md
(+164 files in other folders)
